# esoteric-playground

./: .gitignore  Cargo.toml  Makefile
befunge/: Cargo.toml
befunge/ref/: bef.c
befunge/src/: cell.rs  lib.rs  main.rs  program.rs  tokens.rs
brainfuck/: Cargo.toml
brainfuck/benches/: interpreter_benches.rs  interpreters.rs
brainfuck/data/: fails_to_parse_close.bf  fails_to_parse_open.bf  hello_world4.bf
brainfuck/src/: engines.rs  interpreters.rs  iterator.rs  lib.rs  memory.rs  parsers.rs  utils.rs
examples/: hello_world.rs
jsfuckrs/: README.md
jsfuckrs/examples/: alert.rs
jsfuckrs/src/: main.rs
malbolge/: Cargo.toml
malbolge/src/: lib.rs
src/: iter_utils.rs  lib.rs
src/aemkei/: mod.rs
src/lbp/: building_blocks.rs  mod.rs
src/lbp/data/: alert.txt
whitespace/: Cargo.toml  TODO.md
whitespace/data/: calc-commented.ws  calc.wsp  cat.wsp  factorial.ws  factorial.wsp  hello_world.wsp
whitespace/src/: interpreter.rs  lib.rs  main.rs  tokenizers.rs  tokens.rs
whitespace/src/lex/: manual.rs  mod.rs  nom.rs  tree_sitter.rs
whitespace/src/lex/pest/: pest.rs  whitespace.pest  whitespace_visible.pest
whitespace/src/parse/: mod.rs  nom.rs  tree_sitter.rs
whitespace/src/parse/pest/: pest.rs
