[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wrap_around"]
wrap_around = []
dhat-heap = ["dhat"]

[dependencies]
dhat = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "interpreters"
harness = false
