[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
dhat = { version = "0.3.2", optional = true }
miette = { version = "5.5.0" }
thiserror = "1.0.38"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "interpreter_benches"
harness = false
