[package]
name = "whitespace"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
# anyhow = "1.0.72"
nom = { version = "7.1.3", optional = true }
nom-supreme = { version = "0.8.0", optional = true }
num = { version = "0.4.1", features = ["num-bigint"] }
pest = { version = "2", optional = true, features = ["pretty-print"] }
pest_derive = { version = "2",features = ["grammar-extras"], optional = true }

[features]
default = ["nom", "pest"]
nom = ["dep:nom", "dep:nom-supreme"]
pest = ["dep:pest", "dep:pest_derive"]
