[package]
name = "whitespace"
version = "0.1.0"
edition = "2021"
default-run = "wspace"

# [[bin]]
# name = "lsp"
# path = "src/lsp/lsp.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lsp-server = "0.7.2"
lsp-types = "0.94.1"
# anyhow = "1.0.72"
nom = { version = "7.1.3", optional = true }
nom-supreme = { version = "0.8.0", optional = true }
num = { version = "0.4.1", features = ["num-bigint"] }
pest = { version = "2.7.2", optional = true, features = ["pretty-print"] }
pest_derive = { version = "2.7.2", features = ["grammar-extras"], optional = true }
serde = "1.0.183"
serde_json = "1.0.104"
tree-sitter = { version = "0.20.10", optional = true }
tree-sitter-whitespace = { version = "*", optional = true }

[features]
default = ["nom", "pest", "tree-sitter"]
nom = ["dep:nom", "dep:nom-supreme"]
pest = ["dep:pest", "dep:pest_derive"]
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-whitespace"]
